--- a/configs/translator_policy/pendulum_ppo_flow.yaml
+++ b/configs/translator_policy/pendulum_ppo_flow.yaml
@@ -1,5 +1,5 @@
 defaults:
   - source_policy: pendulum_ppo
-  - action_translator: pendulum_mlp
+  - action_translator: pendulum_flow
 
 _target_: action_translation.ActionTranslatorSB3Policy
