--- a/configs/inverse_dynamics/ant_flow.yaml
+++ b/configs/inverse_dynamics/ant_flow.yaml
@@ -1,6 +1,12 @@
-name: "ant_flow_inverse_dynamics"
-_target_: "dynamics.inverse.learned_inverse_dynamics.FlowInverseDynamics"
-diffusion_step_embed_dim: 16
-down_dims: [16, 32, 64]
-num_inference_steps: 100
-device: "cuda"
+_target_: inverse.learned_inverse_dynamics.FlowInverseDynamics
+name: ant_flow_id
+action_dim: 8 
+obs_dim: 107
+
+diffusion_step_embed_dim: 32
+down_dims: [32, 64, 128]
+num_inference_steps: 10
+
+# Path to the trained action translator checkpoint
+checkpoint_path: null
+
