--- a/configs/action_translator/tests/2d_flow.yaml
+++ b/configs/action_translator/tests/2d_flow.yaml
@@ -1,4 +1,4 @@
-_target_: action_translation.FlowActionPriorTranslator
+_target_: generative_policies.action_translation.FlowActionPriorTranslator
 name: 2d_flow
 action_dim: 2
 obs_dim: 2
