--- a/configs/action_translator/ant_flow.yaml
+++ b/configs/action_translator/ant_flow.yaml
@@ -1,4 +1,5 @@
-_target_: action_translation.FlowActionPriorConditionedTranslator
+#_target_: generative_policies.action_translation.FlowActionPriorConditionedTranslator
+_target_: generative_policies.action_translation.FlowActionPriorConditionedTranslator
 name: ant_flow
 action_dim: 8 
 obs_dim: 107
