--- a/configs/action_translator/ant_mlp.yaml
+++ b/configs/action_translator/ant_mlp.yaml
@@ -1,4 +1,4 @@
-_target_: action_translation.SimpleActionTranslator
+_target_: generative_policies.action_translation.MlpActionTranslator
 name: ant_mlp
 action_dim: 8
 obs_dim: 107
