--- a/configs/action_translator/tests/1d_flow_prior.yaml
+++ b/configs/action_translator/tests/1d_flow_prior.yaml
@@ -1,4 +1,4 @@
-_target_: action_translation.FlowActionPriorTranslator
+_target_: generative_policies.action_translation.FlowActionPriorTranslator
 name: 1d_flow
 action_dim: 1
 obs_dim: 1
