--- a/configs/translator_policy/pendulum_ppo_flow.yaml
+++ b/configs/translator_policy/pendulum_ppo_flow.yaml
@@ -2,4 +2,4 @@ defaults:
   - source_policy: pendulum_ppo
   - action_translator: pendulum_flow
 
-_target_: action_translation.ActionTranslatorSB3Policy
+_target_: generative_policies.action_translation.ActionTranslatorPolicy
