--- a/configs/translator_policy/ant_ppo_og_modphys.yaml
+++ b/configs/translator_policy/ant_ppo_og_modphys.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - source_policy: ant_ppo_1M
-  - action_translator: ant_mlp_int_inthf
+  - source_policy: ant_ppo_5M
+  - action_translator: ant_flow_og_modphys
 
 _target_: generative_policies.action_translation.ActionTranslatorPolicy
