--- a/configs/action_translator/ant_flow_og_modphys.yaml
+++ b/configs/action_translator/ant_flow_og_modphys.yaml
@@ -1,6 +1,6 @@
 #_target_: generative_policies.action_translation.FlowActionPriorConditionedTranslator
 _target_: generative_policies.action_translation.FlowActionPriorConditionedTranslator
-name: ant_flow
+name: ant_flow_og_modphys
 action_dim: 8 
 obs_dim: 107
 
@@ -8,6 +8,4 @@ diffusion_step_embed_dim: 32
 down_dims: [32, 64, 128]
 num_inference_steps: 10
 
-# Path to the trained action translator checkpoint
-checkpoint_path: /home/wph52/weird/dynamics/datasets/ant/relabeled_actions/ant_high_friction/ant_flow_20251008_123006_translator.pth
-
+checkpoint_path: /home/wph52/weird/dynamics/datasets/ant/relabeled_actions/ant_modified_physics/ant_flow_original_id/translator_ant_flow_20251010_182823.pth
