--- a/configs/dataset/source_dataset/ant_original_5m_large.yaml
+++ b/configs/dataset/source_dataset/ant_original_5m_large.yaml
@@ -1,13 +1,12 @@
-_target_: datasets.trajectory_dataset.make_trajectory_dataset
-name: pendulum
+_target_: null
+name: ant_original_5m_large
 
 # Dataset collection parameters
-model_path: /home/wph52/weird/dynamics/rl/runs/Ant-v5_20250929_192912/models/best_model.zip
-env_id: AntIntegrable-v1
-source_env_id: AntIntegrable-v1
-buffer_path: /home/wph52/weird/dynamics/datasets/ant/sequence/ant/buffer.zarr
+model_path: /home/wph52/weird/dynamics/rl/runs/Ant-v5_20251002_211516/models/best_model.zip
+env_id: Ant-v5
+buffer_dir: /home/wph52/weird/dynamics/datasets/ant/transitions/ant_original_5m_large
 env_kwargs: null
-num_episodes: 10
+num_episodes: 100
 max_steps_per_episode: 1000
 deterministic: false
 seed: null
