--- a/configs/inverse_dynamics/ant_flow_original.yaml
+++ b/configs/inverse_dynamics/ant_flow_original.yaml
@@ -1,5 +1,5 @@
 _target_: generative_policies.inverse_dynamics.FlowInverseDynamics
-name: ant_flow_id
+name: ant_flow_original_id
 action_dim: 8 
 obs_dim: 107
 
@@ -7,5 +7,4 @@ diffusion_step_embed_dim: 64
 down_dims: [64, 128, 256]
 num_inference_steps: 10
 
-checkpoint_path: /home/wph52/weird/dynamics/datasets/ant/transitions/ant_5m_large/ant_flow_id_20251009_133900_inverse_dynamics.pth
-
+checkpoint_path: /home/wph52/weird/dynamics/datasets/ant/transitions/ant_original_5m_large/id_ant_flow_id_20251009_175801.pth
