trajectory evaluation against base policy

--- a/configs/action_translator/ant_bc_modphys.yaml
+++ b/configs/action_translator/ant_bc_modphys.yaml
@@ -1,4 +1,3 @@
-#_target_: generative_policies.action_translation.FlowBC
 _target_: generative_policies.action_translation.FlowBC
 name: ant_bc_modphys
 action_dim: 8
@@ -9,4 +8,4 @@ diffusion_step_embed_dim: 32
 down_dims: [32, 64, 128]
 num_inference_steps: 10
 
-checkpoint_path: null
+checkpoint_path: /home/wph52/weird/dynamics/datasets/ant/relabeled_actions/ant_modified_physics/ant_flow_original_id/translator_ant_bc_modphys_20251013_125800.pth
