--- a/configs/action_translator/pendulum_bc_modphys.yaml
+++ b/configs/action_translator/pendulum_bc_modphys.yaml
@@ -7,6 +7,9 @@ diffusion_step_embed_dim: 32
 down_dims: [32, 64]
 num_inference_steps: 10
 
+# Target with 1.8 randn (100 traj x 100 steps)
+checkpoint_path: /home/wph52/weird/dynamics/datasets/pendulum/relabeled_actions/pendulum_modphys_random/translator_pendulum_flow_20251021_112323.pth
+
 # Large dataset (100 traj)
 # checkpoint_path: /home/wph52/weird/dynamics/datasets/pendulum/relabeled_actions/pendulum_modphys/translator_pendulum_flow_20251020_163626.pth
 
@@ -14,4 +17,4 @@ num_inference_steps: 10
 # checkpoint_path: /home/wph52/weird/dynamics/datasets/pendulum/relabeled_actions/pendulum_modphys_10/translator_pendulum_flow_20251020_170549.pth
 
 # Tiny dataset (1 traj)
-checkpoint_path: /home/wph52/weird/dynamics/datasets/pendulum/relabeled_actions/pendulum_modphys_1/translator_pendulum_flow_20251020_171536.pth
+#checkpoint_path: /home/wph52/weird/dynamics/datasets/pendulum/relabeled_actions/pendulum_modphys_1/translator_pendulum_flow_20251020_171536.pth
