--- a/configs/action_translator/pusher_bc_modphys.yaml
+++ b/configs/action_translator/pusher_bc_modphys.yaml
@@ -7,6 +7,11 @@ diffusion_step_embed_dim: 32
 down_dims: [32, 64, 128]
 num_inference_steps: 10
 
-checkpoint_path: /home/wph52/weird/dynamics/datasets/pusher/relabeled_actions/pusher_modphys/translator_pusher_bc_modphys_20251019_135206.pth
 
+# weight_decay: 1e-4
 
+# New eval strat, new data, no weight decay
+# checkpoint_path: /home/wph52/weird/dynamics/datasets/pusher/relabeled_actions/pusher_modphys/pusher_flow_id/translator_pusher_bc_modphys_20251025_145346.pth
+
+# New eval strat, new data, weight decay 1e-4
+checkpoint_path: /home/wph52/weird/dynamics/datasets/pusher/relabeled_actions/pusher_modphys/pusher_flow_id/translator_pusher_bc_modphys_20251025_123638.pth
