--- a/configs/action_translator/pusher_flow_og_modphys.yaml
+++ b/configs/action_translator/pusher_flow_og_modphys.yaml
@@ -7,6 +7,7 @@ diffusion_step_embed_dim: 32
 down_dims: [32, 64, 128]
 num_inference_steps: 10
 
-checkpoint_path: /home/wph52/weird/dynamics/datasets/pusher/relabeled_actions/pusher_modphys/translator_pusher_flow_og_modphys_20251019_132758.pth
+# No weight decay
+checkpoint_path: /home/wph52/weird/dynamics/datasets/pusher/relabeled_actions/pusher_modphys/pusher_flow_id/translator_pusher_flow_og_modphys_20251025_123638_best.pth 
 
 
